--- a/app/views/halo4/service_record/_overview.html.haml
+++ b/app/views/halo4/service_record/_overview.html.haml
@@ -1,4 +1,4 @@
-.well.span9
+.well
   %h3 Overview:
   .row-fluid
     .span4{:style => "background-repeat: no-repeat; background-position: 110px 20px; background-image: url('#{X343ApiController.asset_url_generator_basic(@service_record['EmblemImageUrl']['BaseUrl'], @service_record['EmblemImageUrl']['AssetUrl'], '100')}')"}
