--- a/app/views/search/index.html.haml
+++ b/app/views/search/index.html.haml
@@ -1,4 +1,4 @@
-- title " - #{params[:gamertag]}'s Search Results'"
+- title " - #{params[:gamertag]}'s Search Results"
 - active_home 'active'
 
 .container{:style => 'margin-top: 80px;'}
