--- a/app/views/halo4/commendations.html.haml
+++ b/app/views/halo4/commendations.html.haml
@@ -2,27 +2,26 @@
 - active_halo4 'active'
 - search_query @service_record['Gamertag']
 
-.container{:style => "margin-top: 80px; min-width: 1300px; max-width: 1300px;"}
-  .row-fluid
+.row-fluid
 
-    = h4_sidebar_commendations 'active'
-    = render :partial => 'halo4/global/sidebar', :object => @service_record
+  = h4_sidebar_commendations 'active'
+  = render :partial => 'halo4/global/sidebar', :object => @service_record
 
-    = render :partial => 'application/notification_header'
+  = render :partial => 'application/notification_header'
 
-    = render :partial => 'halo4/global/service_record_header', :object => @service_record
+  = render :partial => 'halo4/global/service_record_header', :object => @service_record
 
-    .span9
-      - @commendation_categories.each do |category|
-        - commendations = commendations_by_category(category['Id'])
-        - if category['Name'] == '--'
-          - next
-        .well
-          %h3
-            #{@service_record['Gamertag']}'s #{plural_commendation_category_name_to_single(category['Name'])} Commendations:
+  .span9
+    - @commendation_categories.each do |category|
+      - commendations = commendations_by_category(category['Id'])
+      - if category['Name'] == '--'
+        - next
+      .well{ :style => 'padding: 10px 0 0 10px;' }
+        %h3
+          #{@service_record['Gamertag']}'s #{plural_commendation_category_name_to_single(category['Name'])} Commendations:
 
-          .commendations-stuff{  }
-            - commendations.each do |commendation|
-              = render :partial => 'halo4/commendations/commendation', :locals => { :category => category, :commendation => commendation }
+        .commendations-stuff{  }
+          - commendations.each do |commendation|
+            = render :partial => 'halo4/commendations/commendation', :locals => { :category => category, :commendation => commendation }
 
-          .cleaner
+        .cleaner
