--- a/app/views/halo4/service_record.html.haml
+++ b/app/views/halo4/service_record.html.haml
@@ -2,16 +2,15 @@
 - active_halo4 'active'
 - search_query @service_record['Gamertag']
 
-.container{:style => "margin-top: 80px; min-width: 1300px; max-width: 1300px;"}
-  .row-fluid
+.row-fluid
 
-    = h4_sidebar_overview 'active'
-    = render :partial => 'halo4/global/sidebar', :object => @service_record
+  = h4_sidebar_overview 'active'
+  = render :partial => 'halo4/global/sidebar', :object => @service_record
 
-    = render :partial => 'application/notification_header'
+  = render :partial => 'application/notification_header'
 
-    = render :partial => 'halo4/global/service_record_header', :object => @service_record
+  = render :partial => 'halo4/global/service_record_header', :object => @service_record
 
+  .span9
     = render :partial => 'halo4/service_record/overview', :object => @service_record
-
     = render :partial => 'halo4/service_record/recent_match_summary', :object => @service_record
