--- a/app/views/halo4/service_record/_recent_match_summary.html.haml
+++ b/app/views/halo4/service_record/_recent_match_summary.html.haml
@@ -1,4 +1,4 @@
-.well.span9{:style => "margin: 0 0 0 332px;"}
+.well
   %h3 Match History:
   .row-fluid
     .axis{:style => "float: left; padding-right: 30px; margin-right: 30px; border-right: 1px solid #333;"}
