--- a/app/views/halo4/view_match/_view_war_games.html.haml
+++ b/app/views/halo4/view_match/_view_war_games.html.haml
@@ -27,9 +27,9 @@
             Medals
 
       .carnage-report-header-graph
-        %div{ :id => 'graph-carnage-header-kills', :style => 'margin: 0 auto; width: 900px; height: 350px;' }
-        %div{ :id => 'graph-carnage-header-deaths', :style => 'margin: 0 auto; width: 900px; height: 350px;' }
-        %div{ :id => 'graph-carnage-header-medals', :style => 'margin: 0 auto; width: 900px; height: 350px;' }
+        %div{ :id => 'graph-carnage-header-kills', :style => 'margin: 0 auto; width: 100%; height: 350px;' }
+        %div{ :id => 'graph-carnage-header-deaths', :style => 'margin: 0 auto; width: 100%; height: 350px;' }
+        %div{ :id => 'graph-carnage-header-medals', :style => 'margin: 0 auto; width: 100%; height: 350px;' }
 
         %div{ :style => 'margin: 15px 0 25px 0; text-align: center;' }
           Carnage Timeline:
