--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -10,7 +10,7 @@
     = stylesheet_link_tag    'application', :media => 'all'
     = stylesheet_link_tag    'bootstrap.min', :media => 'all'
     = stylesheet_link_tag    'morris', :media => 'all'
-    / <haml:loud> stylesheet_link_tag    'bootstrap-responsive.min', :media =&gt; 'all' </haml:loud>
+    / stylesheet_link_tag    'bootstrap-responsive.min', :media =&gt; 'all'
     = stylesheet_link_tag    'jbclock', :media => 'all'
     = stylesheet_link_tag    'jquery.jqplot.min', :media => 'all'
     = javascript_include_tag 'bootstrap.min'
@@ -18,6 +18,7 @@
     = javascript_include_tag 'jbclock'
     = javascript_include_tag 'jquery.jqplot.min'
     = javascript_include_tag 'morris'
+    = javascript_include_tag 'Chart.min'
 
     = yield(:head_style)
     :css
@@ -67,7 +68,11 @@
                 %a{:href => "/"} About
             .navbar-search.pull-right
               %input#search-navbar.search-query.span2{:placeholder => "Gamertag Search", :style => "border-radius: 20px;", :type => "text", :value => yield(:search_query)}/
-    = yield
+
+    .container{:style => "margin-top: 80px; min-width: 1100px; max-width: 1300px;"}
+      = yield
+
+
     %hr/
     %footer
       %p 343 stats, bunge styl
