Playlist CSR Viewing, More fixes for smaller screens.

--- a/app/views/halo4/competitive_skill_rank/_detailed_csr.html.haml
+++ b/app/views/halo4/competitive_skill_rank/_detailed_csr.html.haml
@@ -12,16 +12,15 @@
 
   %tbody
     - skill_ranks = csr_data_from_type(type)
-    - skill_ranks.each do |skill_rank|
+    - skill_ranks.sort_by{ |skull_rank| skull_rank['CurrentSkillRank'] }.reverse.each do |skill_rank|
       - playlist_data = playlist_data_from_id(skill_rank['PlaylistId'])
       %tr
         %td
           %img{ :src => X343ApiController.asset_url_generator_basic(playlist_data['ImageUrl']['BaseUrl'], playlist_data['ImageUrl']['AssetUrl'], 'small') }
         %td
-          #{playlist_data['Name']}
+          %a{ :href => "/halo4/servicerecord/#{@service_record['Gamertag']}/competitive-skill-rank/#{playlist_data['Id']}/" }
+            #{playlist_data['Name']}
         %td
           #{playlist_data['Description']}
         %td
           %img{ :src => csr_image_from_current_csr(skill_rank['CurrentSkillRank'], 'medium') }
-
-
