--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -69,10 +69,12 @@
             .navbar-search.pull-right
               %input#search-navbar.search-query.span2{:placeholder => "Gamertag Search", :style => "border-radius: 20px;", :type => "text", :value => yield(:search_query)}/
 
-    .container{:style => "margin-top: 80px; min-width: 1100px; max-width: 1300px;"}
-      = yield
-
-
+    = if yield(:container_type) == 'fluid'
+      .container-fluid{:style => "margin: 0 10%; margin-top: 80px;"}
+        = yield
+    - else
+      .container-fluid{:style => "margin: 0 15%; margin-top: 80px; min-width: 1100px;"}
+        = yield
     %hr/
     %footer
       %p 343 stats, bunge styl
