--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -63,18 +63,19 @@
                     %a{:href => "/halo4/playlists"} Playlists
                   %li.divider
               %li{:class => yield(:active_blog)}
-                %a{:href => "/blog"} Blog
+                %a{:href => "/blog/"} Blog
               %li{:class => yield(:active_about)}
-                %a{:href => "/"} About
+                %a{:href => "/about/"} About
             .navbar-search.pull-right
               %input#search-navbar.search-query.span2{:placeholder => "Gamertag Search", :style => "border-radius: 20px;", :type => "text", :value => yield(:search_query)}/
 
     = if yield(:container_type) == 'fluid'
-      .container-fluid{:style => "margin: 0 10%; margin-top: 80px;"}
+      .container-fluid{ :style => "margin: 0 10%; margin-top: 80px;" }
         = yield
     - else
-      .container-fluid{:style => "margin: 0 15%; margin-top: 80px; min-width: 1100px;"}
+      .container-fluid{ :style => "margin: 0 15%; margin-top: 80px; min-width: 1100px;" }
         = yield
+
     %hr/
     %footer
       %p 343 stats, bunge styl
