--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -62,6 +62,10 @@
                   %li
                     %a{:href => "/halo4/playlists"} Playlists
                   %li.divider
+                  %li
+                    %a{:href => "http://leafapp.co/leaderboards"} Top Ten Leaderboards
+                  %li
+                    %a{:href => "/halo4/playlists/csr_leaderboards"} CSR Leaderboards
               %li{:class => yield(:active_blog)}
                 %a{:href => "/blog/"} Blog
               %li{:class => yield(:active_about)}
