--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -65,7 +65,7 @@
                   %li
                     %a{:href => "http://leafapp.co/leaderboards"} Top Ten Leaderboards
                   %li
-                    %a{:href => "/halo4/playlists/csr_leaderboards"} CSR Leaderboards
+                    %a{:href => "http://leafapp.co/csr_leaderboards"} CSR Leaderboards
               %li{:class => yield(:active_blog)}
                 %a{:href => "/blog/"} Blog
               %li{:class => yield(:active_about)}
