--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -74,11 +74,11 @@
               %input#search-navbar.search-query.span2{:placeholder => "Gamertag Search", :style => "border-radius: 20px;", :type => "text", :value => yield(:search_query)}/
 
     - if yield(:container_type) == 'fluid'
-      .container-fluid{ :style => "margin: 0 10%; margin-top: 80px;" }
-      = yield
+      .container-fluid{ :style => "margin-top: 80px; max-width: 1600px; min-width: 1200px;" }
+        = yield
     - else
-      .container-fluid{ :style => "margin: 0 15%; margin-top: 80px; min-width: 1100px;" }
-      = yield
+      .container-fluid{ :style => "margin-top: 80px; max-width: 1600px; min-width: 1200px;" }
+        = yield
 
     %hr/
     %footer
