Added Social Integration (Fixes #4)

--- a/app/views/halo4/commendations.html.haml
+++ b/app/views/halo4/commendations.html.haml
@@ -25,3 +25,4 @@
             = render :partial => 'halo4/commendations/commendation', :locals => { :category => category, :commendation => commendation }
 
         .cleaner
+    = render :partial => 'halo4/global/social_sharing'
