--- a/app/views/halo4/competitive_skill_rank.html.haml
+++ b/app/views/halo4/competitive_skill_rank.html.haml
@@ -33,3 +33,4 @@
             = render :partial => 'halo4/competitive_skill_rank/detailed_csr', :locals => { :type => 'team', :type_friendly => 'Team' }
           #B.tab-pane
             = render :partial => 'halo4/competitive_skill_rank/detailed_csr', :locals => { :type => 'individual', :type_friendly => 'Individual' }
+    = render :partial => 'halo4/global/social_sharing'
