--- a/app/views/halo4/specializations.html.haml
+++ b/app/views/halo4/specializations.html.haml
@@ -20,3 +20,4 @@
         = render :partial => 'halo4/specializations/pending'
       .span6.well
         = render :partial => 'halo4/specializations/completed'
+    = render :partial => 'halo4/global/social_sharing'
