--- a/app/views/halo4/view_match/_view_spartan_ops.html.haml
+++ b/app/views/halo4/view_match/_view_spartan_ops.html.haml
@@ -1,7 +1,7 @@
 - chapter = get_spartan_ops_data_from_chapter_id(@match['ChapterId'])
 - title " - #{chapter['Name']} as #{@service_record['Gamertag']}"
 
-.well.span8
+.well
   %h3
     #{chapter['Title']}
     %br/
