--- a/app/views/halo4/view_match/_view_war_games.html.haml
+++ b/app/views/halo4/view_match/_view_war_games.html.haml
@@ -1,6 +1,6 @@
 - title " - #{@match['GameVariantName']} on #{@match['MapVariantName']} as #{@service_record['Gamertag']}"
 
-.well.span8
+.well
 	%h3
 		= @match['GameVariantName']
 		on #{@match['MapVariantName']}
